# Windows-PE-Packer

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README-CN.md  README.md  build.ps1
docs/: Set the Property of Assembly Files in Visual Studio.md  Set the Property of the .ASM File in Visual Studio.md
docs/Doxygen/: entry_shell.h  main_page.h  new_import_table.h
include/: extra_data.h  image.h  import_table.h  section.h
include/shell/: install_shell.h
include/utility/: encrypt.h  error_handling.h  file_access.h  platform_check.h
src/: CMakeLists.txt  extra_data.c  image.c  import_table.c  main.c  section.c
src/shell/: CMakeLists.txt  entry_export.h  entry_x86.asm  install_shell.c
src/shell/include_x86/: windows.inc  winextra.inc
src/utility/: CMakeLists.txt  encrypt.c  error_handling.c  file_access.c  platform_check_x64.c  platform_check_x86.c
